# Rock-pi-3A-Gesture

./: README.md
Lite-HRNet-SimCC/: README.md  hand_21_keypoints.json  my_dataset_coco.py  predict.py  requirements.txt  save_some_train_images.py  toTorchScript.py  train.py  transforms.py  validation.py
Lite-HRNet-SimCC/model/: Lite_HRNet_SimCC.py  __init__.py
Lite-HRNet-SimCC/train_utils/: __init__.py  channel_shuffle.py  coco_eval.py  loss.py  param_init.py  train_eval_utils.py
YOLO-FastestV2-AnchorFree/: .gitignore  README.md  draw_some_datasets.py  get_mAP.py  predict_video.py  pytorch2onnx.py  requirements.txt  train.py
YOLO-FastestV2-AnchorFree/build_utils/: datasets.py  datasets_coco.py  img_utils.py  parse_config.py  torch_utils.py  utils.py
YOLO-FastestV2-AnchorFree/cfg/: hyp.yaml
YOLO-FastestV2-AnchorFree/data/: classes.json  mydata.data
YOLO-FastestV2-AnchorFree/models/: detector.py  fpn.py
YOLO-FastestV2-AnchorFree/models/backbone/: shufflenetv2.py
YOLO-FastestV2-AnchorFree/toncnn/: export2ncnn.sh  onnx2ncnn
YOLO-FastestV2-AnchorFree/train_utils/: train_eval_utils.py
generate_hand_keypoints_datasets/: README.md  check_coco_json_file.py  main.py
net_benchmark/: CMakeLists.txt  README.md  aarch64-linux-gnu.toolchain.cmake  cmake_bash.sh  net_interface_benchmark.cpp
rock3a_gesture/: CMakeLists.txt  README.md  benchmark.cpp  fist_track.cpp  fist_track.h  kalman_filter.cpp  kalman_filter.h  keypointsdetector.cpp  keypointsdetector.h  linux_virtual_device.cpp  linux_virtual_device.h  main.cpp  src.qrc  style.qss  widget.cpp  widget.h  widget.ui  yolo-fastestv2-anchorfree.cpp  yolo-fastestv2-anchorfree.h
